# kai_o

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.py  build_scripts.py  conanfile.py
data/: emprofile
scripts/: virtual_env_tools.py
source/: CMakeLists.txt
source/_engine/: Rendering.hpp
source/application/: AppClock.hpp  CMakeLists.txt  FrameRateCounter.cpp  FrameRateCounter.hpp  KIApplication.cpp  KIApplication.hpp  SDLUserEvents.hpp
source/game_model/: CMakeLists.txt  PieceData.hpp  PieceDataManager.hpp  ScratchPad.hpp
source/grid/: CMakeLists.txt  Grid.hide
source/gui/: BlinkMenu.cpp  BlinkMenu.hpp  CMakeLists.txt  KIDisplay.cpp  KIDisplay.hpp  KIGUI.cpp  KIGUI.hpp
source/model/: UpdatableData.hpp
source/rendering/: CMakeLists.txt  KIRenderLayer.cpp  KIRenderLayer.hpp  KITextureManager.cpp  KITextureManager.hpp  LayeredRenderer.cpp  LayeredRenderer.hidepp  SDLUtil.hpp  TextureUtility.hpp
source/utilities/: Utilities.cpp  Utilities.hpp
staging/: CMakeLists.txt  main.cpp
